[tool.poetry]
name = "bite_di"
version = "0.1.0"
description = "A bitesized dependecny injection library for Python"
authors = ["opengeek2"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
mypy = "^0.920"
typeguard = "^2.13.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
radon = "^5.1.0"
cohesion = "^1.0.0"
pydeps = "^1.10.12"
Sphinx = "^4.3.1"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
lxml = "^4.6.4"
docutils = "^0.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
