[metadata]
name = bite_di-opengeekv2
version = 0.0.1
author = Marc Mauri Alloza
author_email = marcmaurialloza@gmail.com
description = A bitesize DI library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/opengeekv2/bite_di
project_urls =
    Bug Tracker = https://github.com/opengeekv2/bite_di/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src